--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#F1EFF0"
-    android:gravity="center"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
 
-       <TextView
-           android:id="@+id/titulo"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginStart="30dp"
-           android:text="QUIZ APP PRO"
-           android:layout_marginLeft="30dp"
-           android:textSize="50sp"/>
+        <TextView
+            android:id="@+id/titulo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="QUIZ APP PRO"
+            android:textSize="50sp"/>
 
         <ImageView
+            android:layout_below="@+id/titulo"
             android:id="@+id/logo_img"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="50dp"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@drawable/logo"/>
 
+    <LinearLayout
+        android:id="@+id/contenedor"
+        android:layout_below="@+id/titulo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal"
+        android:layout_marginStart="250dp"
+        android:layout_marginLeft="350dp">
+
         <Button
             android:id="@+id/jugar_button"
-            android:layout_width="match_parent"
+            android:layout_width="211dp"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:background="@drawable/button_one"
@@ -41,10 +47,9 @@
             android:text="@string/play"
             android:textColor="@color/black"
             android:textSize="18sp" />
-
         <Button
             android:id="@+id/opciones_button"
-            android:layout_width="match_parent"
+            android:layout_width="211dp"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:background="@drawable/button_two"
@@ -52,6 +57,18 @@
             android:text="@string/opciones"
             android:textColor="@color/black"
             android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+       android:layout_below="@+id/contenedor"
+        android:layout_width="211dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="350dp"
+        android:layout_marginLeft="350dp"
+        android:orientation="horizontal">
+
+
         <Button
             android:id="@+id/puntaje_button"
             android:layout_width="match_parent"
@@ -63,6 +80,11 @@
             android:textColor="@color/black"
             android:textSize="18sp" />
 
+
+
+
+
     </LinearLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
