--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
                 android:layout_marginStart="30dp"
                 android:text="QUIZ APP PRO"
                 android:layout_marginLeft="30dp"
+                android:textStyle="bold"
                 android:textSize="50sp"/>
 
             <ImageView
@@ -63,7 +64,7 @@
                 android:layout_margin="15dp"
                 android:background="@drawable/button_three"
                 android:padding="15dp"
-                android:text="@string/opciones"
+                android:text="@string/puntaje"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
