se agrega cantidad de letras para restringir nombre de usuario
Signed-off-by: Jellian <haanniiaarodriguez@gmail.com>

--- a/app/src/main/res/layout/agregar_usuarios.xml
+++ b/app/src/main/res/layout/agregar_usuarios.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <ImageView
         android:id="@+id/iconview"
@@ -14,15 +15,19 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/face_global" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:counterEnabled="true"
+        app:counterMaxLength="6">
+
     <EditText
         android:id="@+id/username"
-        android:inputType="textEmailAddress"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
         android:hint="username" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
