se añade evento para recuperar la posicion del usuario seleccionado
Signed-off-by: Jellian <haanniiaarodriguez@gmail.com>

--- a/app/src/main/res/layout/activity_change_user.xml
+++ b/app/src/main/res/layout/activity_change_user.xml
@@ -17,6 +17,7 @@
     <ListView
         android:id="@+id/Listusers"
         android:layout_width="match_parent"
+        android:clickable="true"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"/>
