--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -16,7 +16,7 @@
         android:icon="@drawable/edit"
         android:title="Editar " />
     <item
-        android:id="@+id/item4"
+        android:id="@+id/delete"
         android:icon="@drawable/delete"
         android:title="Eliminar" />
 
