--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,9 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="#94bcc7"
-    >
+    android:background="#94bcc7">
 
 
     <ImageView
