--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -7,23 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".DetailUser">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        app:navigationIcon="@drawable/order"
-        android:background="@color/cardview_dark_background"
-        android:layout_height="wrap_content"/>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textSize="24sp"
-        android:hint="nombre actual"/>
+        android:hint="nombreactual"/>
 
     <ImageView
         android:id="@+id/iconuser"
