--- a/app/src/main/res/layout/detail_user.xml
+++ b/app/src/main/res/layout/detail_user.xml
@@ -42,20 +42,21 @@
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/calendar"
                     android:layout_toRightOf="@+id/calendar"
+                    android:layout_marginTop="3dp"
                     android:textColor="@color/black"
-                    android:textSize="22sp"
+                    android:textSize="16sp"
                     tools:text="2021-01-20" />
 
             </LinearLayout>
 
+
             <LinearLayout
-                android:id="@+id/l2"
+                android:id="@+id/l3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginLeft="2dp"
-                android:layout_toEndOf="@+id/l1"
-                android:layout_toRightOf="@+id/l1"
+                android:layout_centerInParent="true"
+                android:paddingLeft="2dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -68,33 +69,16 @@
                     android:id="@+id/text_pistas"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/calendar"
-                    android:layout_toRightOf="@+id/calendar"
                     android:textColor="@color/black"
-                    android:textSize="22sp"
+                    android:textSize="20sp"
                     tools:text="Pistas" />
-
                 <TextView
                     android:id="@+id/pistasnumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/calendar"
-                    android:layout_toRightOf="@+id/calendar"
                     android:textColor="@color/black"
                     android:textSize="22sp"
                     tools:text="3" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/l3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="2dp"
-                android:layout_toEndOf="@+id/l2"
-                android:layout_toRightOf="@+id/l1"
-                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/dificultad_image"
@@ -106,8 +90,6 @@
                     android:id="@+id/level"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/calendar"
-                    android:layout_toRightOf="@+id/calendar"
                     android:textColor="@color/black"
                     android:textSize="22sp"
                     tools:text="level" />
@@ -120,27 +102,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginLeft="2dp"
-                android:layout_toEndOf="@+id/l3"
-                android:layout_toRightOf="@+id/l1"
-                android:orientation="horizontal">
+                android:layout_alignParentEnd="true"
+                android:orientation="horizontal"
+                android:layout_alignParentRight="true">
 
                 <ImageView
                     android:id="@+id/scoreimage"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginTop="3dp"
-                    android:layout_toStartOf="@+id/puntos"
-                    android:layout_toLeftOf="@+id/puntos"
-                    android:layout_toRightOf="@+id/puntos"
                     android:src="@drawable/estrella_global" />
 
                 <TextView
                     android:id="@+id/puntos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     tools:text="1000" />
