--- a/app/src/main/res/layout-land/activity_opciones.xml
+++ b/app/src/main/res/layout-land/activity_opciones.xml
@@ -38,8 +38,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="40dp"
-        android:orientation="vertical">
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        android:gravity="center">
 
         <LinearLayout
 
@@ -87,8 +88,8 @@
                 android:id="@+id/cine_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="140dp"
-                android:layout_marginLeft="140dp" />
+                android:layout_marginStart="70dp"
+                android:layout_marginLeft="70dp" />
 
             <ImageView
                 android:id="@+id/cine_img"
@@ -96,21 +97,13 @@
                 android:layout_height="match_parent"
                 android:layout_margin="2dp"
                 android:src="@drawable/cine_text" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
-
-
             <CheckBox
 
                 android:id="@+id/deporte_checkbox"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="70dp"
+                android:layout_marginLeft="70dp"/>
 
             <ImageView
                 android:id="@+id/deporte_img"
@@ -119,22 +112,8 @@
                 android:layout_margin="2dp"
                 android:src="@drawable/deporte_text" />
 
-            <CheckBox
-
-                android:id="@+id/musica_checkbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="140dp"
-                android:layout_marginLeft="140dp" />
-
-            <ImageView
-                android:id="@+id/musica_img"
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:layout_margin="2dp"
-                android:src="@drawable/musica_text" />
-
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -144,9 +123,24 @@
 
             <CheckBox
 
-                android:id="@+id/arte_checkbox"
+                android:id="@+id/musica_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/musica_img"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:src="@drawable/musica_text" />
+
+            <CheckBox
+
+                android:id="@+id/arte_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="70dp"
+                android:layout_marginLeft="70dp"/>
 
             <ImageView
                 android:id="@+id/arte_img"
@@ -160,8 +154,8 @@
                 android:id="@+id/videojuegos_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="140dp"
-                android:layout_marginLeft="140dp" />
+                android:layout_marginStart="70dp"
+                android:layout_marginLeft="70dp" />
 
             <ImageView
                 android:id="@+id/videojuegos_img"
@@ -178,8 +172,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
         <TextView
             android:id="@+id/spinner_text"
@@ -203,7 +197,7 @@
         android:id="@+id/radioGroup1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_gravity="center"
         >
 
@@ -229,24 +223,27 @@
             android:text="Nivel Bajo"/>
     </RadioGroup>
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
 
-    <Switch
-        android:id="@+id/pistas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Habilitar pistas"
-        />
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <Switch
+            android:id="@+id/pistas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Habilitar pistas"
+            />
         <TextView
             android:id="@+id/spinnerpistas_text"
             android:layout_width="wrap_content"
